--- a/src/index.css
+++ b/src/index.css
@@ -39,15 +39,15 @@ h1 {
 }
 
 button {
-  /* border-radius: 8px;
+  border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  /* padding: 0.6em 1.2em; */
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #9bd61c;
+  /* background-color: #9bd61c; */
   cursor: pointer;
-  transition: border-color 0.25s; */
+  transition: border-color 0.25s;
 }
 button:hover {
   border-color: #313af2;
